2014-09-04  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Introduce CSS_BASIC_SHAPES_TYPE_CASTS, and use it
        https://bugs.webkit.org/show_bug.cgi?id=136403

        Reviewed by Daniel Bates.

        toCSSBasicShapeFoo() will help to detect wrong type casting. So this patch generates it, and use it
        instead of static_cast<const CSSBasicShapeFoo*>().

        No new tests no behavior changes.

        * css/BasicShapeFunctions.cpp:
        (WebCore::basicShapeForValue):
        * css/CSSBasicShapes.cpp:
        (WebCore::CSSBasicShapeCircle::equals):
        (WebCore::CSSBasicShapeEllipse::equals):
        (WebCore::CSSBasicShapePolygon::equals):
        (WebCore::CSSBasicShapeInset::equals):
        * css/CSSBasicShapes.h:

2014-09-04  Daniel Bates  <dabates@apple.com>

        [iOS] Make iOS build when ENABLE_TOUCH_EVENT and ENABLE_IOS_TOUCH_EVENTS disabled
        https://bugs.webkit.org/show_bug.cgi?id=136494

        Reviewed by Andy Estes.

        * WebCore.exp.in: Add ENABLE(IOS_TOUCH_EVENTS) and ENABLE(TOUCH_EVENTS) guards. Also, sort this file using
        the script Tools/Scripts/sort-export-file.
        * bindings/js/JSDocumentCustom.cpp: Add ENABLE(TOUCH_EVENTS)-guard around headers JSTouch.h and JSTouchList.h.
        * page/ios/WebEventRegion.mm: Substitute ENABLE(IOS_TOUCH_EVENTS) for ENABLE(TOUCH_EVENTS) since this
        code is specific to the iOS touch machinery.
        * page/scrolling/ScrollingCoordinator.cpp: Add ENABLE(IOS_TOUCH_EVENTS) and ENABLE(TOUCH_EVENTS) guards. 
        (WebCore::ScrollingCoordinator::computeNonFastScrollableRegion): Substitute ENABLE(IOS_TOUCH_EVENTS) for PLATFORM(IOS).
        * platform/ios/ScrollAnimatorIOS.h: Add ENABLE(TOUCH_EVENTS) guard.
        * platform/ios/ScrollAnimatorIOS.mm:
        (WebCore::ScrollAnimatorIOS::ScrollAnimatorIOS): Ditto.
        * platform/ios/wak/WAKResponder.h: Ditto.
        * rendering/RenderLayer.cpp: